--- a/bookstore/public/templates/books/details.dust
+++ b/bookstore/public/templates/books/details.dust
@@ -1,11 +1,11 @@
 {>"layouts/master" /}
 
 {<body}
-    <div class="large-4 columns book">
-       <img src="{book.cover}">
-    </div>
-    <div class="large-8 columns book">
-      <h2>{book.title}</h2>
+  	<div class="large-4 columns book">
+  	   <img src="{book.cover}">
+  	</div>
+  	<div class="large-8 columns book">
+  		<h2>{book.title}</h2>
       <ul class="bookInfo">
         <li>Category: {book.category}</li>
         <li>Author: {book.author}</li>
@@ -16,6 +16,9 @@
     <br>
     <p>{book.description}</p>
     
-    <a class="button success">Add To Cart</a>
-    </div>
+    <form method="post" action="/cart/{book._id}">
+    <input type="submit" class="button success" value="Add To Cart">
+    <input type="hidden" value="{_csrf}" name="_csrf">
+    </form>
+  	</div>
 {/body}
